--- a/src/main/resources/templates/kaohe/all_score_pass.html
+++ b/src/main/resources/templates/kaohe/all_score_pass.html
@@ -31,7 +31,7 @@
 					</div>
 					<label class="layui-form-label">课程与班级</label>
 					<div class="layui-input-inline">
-						<select name="course" lay-filter="course" lay-verify="required">
+						<select name="course" id="course" lay-filter="course" lay-verify="required">
 							<option value="">请选择课程</option>
 							<option th:each="course:${courseList}" th:value="${course.id}" th:text="${course.courseName}" th:selected="${course.id == courseId}"></option>
 						</select>
@@ -41,7 +41,10 @@
 							<option value="">请选择班级</option>
 						</select>
 					</div>
-					<div class="layui-input-inline"><a href="/passTotalscore/exportExcel" class="layui-btn" th:if="${Choose}">导出表格</a></div>
+					<div class="layui-input-inline">
+						<button class="layui-btn" id="doSearch">查询</button>
+					</div>
+					<div class="layui-input-inline"><a th:href="|/passTotalscore/exportExcel/${courseId}/${classId}/|" class="layui-btn" th:if="${Choose}">导出表格</a></div>
 				</div>
 			</form>
 			<table class="layui-table">
@@ -66,12 +69,15 @@
 					</tr>
 				</tbody>
 			</table>
+			<div id="pager"></div>
 		</div>
 		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
 		<script>
 			$(function () {
-				var form = layui.form,
+				var layer = layui.layer,
+					form = layui.form,
+					laypage = layui.laypage,
 					_courseId = '[[${courseId}]]',
 					_classId = '[[${classId}]]'
 				if (_courseId) {
@@ -82,6 +88,24 @@
 						getClassList(data.value)
 					} else {
 						$('#class').empty().append('<option value="">请选择班级</option>')
+					}
+				})
+				$('#doSearch').click(function (e) {
+					e.preventDefault()
+					if ($('#course').val() && $('#class').val()) {
+						window.location.href = '/passTotalscore/list/' + $('#course').val() + '/' + $('#class').val() + '/'
+					} else {
+						layer.msg('课程与班级')
+					}
+				})
+				laypage.render({
+					elem: 'pager',
+					curr: parseInt('[[${pageNum}]]'),
+					count: parseInt('[[${pageTotalScore}]]'),
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
 					}
 				})
 				function getClassList(courseId) {
