当往期成绩修改

--- a/src/main/resources/templates/kaohe/all_score_pass.html
+++ b/src/main/resources/templates/kaohe/all_score_pass.html
@@ -27,7 +27,7 @@
 				<div class="layui-form-item">
 					<div class="layui-input-inline">
 						<a href="/totalscore/list" class="layui-btn layui-btn-primary">当期</a>
-						<a href="/passTotalscore/list" class="layui-btn">往期</a>
+						<a href="/passTotalscore/list/0/0" class="layui-btn">往期</a>
 					</div>
 					<label class="layui-form-label">课程与班级</label>
 					<div class="layui-input-inline">
