--- a/src/main/resources/templates/kaohe/all_score.html
+++ b/src/main/resources/templates/kaohe/all_score.html
@@ -35,7 +35,7 @@
 				<div class="layui-form-item">
 					<div class="layui-input-inline">
 						<a href="/totalscore/list" class="layui-btn">当期</a>
-						<a href="/passTotalscore/list" class="layui-btn layui-btn-primary">往期</a>
+						<a href="/passTotalscore/list/0/0" class="layui-btn layui-btn-primary">往期</a>
 					</div>
 					<label class="layui-form-label">课程与班级</label>
 					<div class="layui-input-inline">
